# rdkit-pypi

./: .gitmodules  .travis.yml  MANIFEST.in  README.md  appveyor.yml  azure-pipelines.yml  pyproject.toml  setup.py  vcpkg.json  vcpkg_with_boost.json
.github/workflows/: arm64_test_rdkit.yml  arm64_wheels.yml  wheels.yml
