[project]
requires-python = ">=3.6"

[dependencies]
numpy = "^1.19"

[build-system]
requires = ["setuptools>=42", "wheel", "cmake==3.21.1", "numpy==1.19.4"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]

build-verbosity = "3"

build = "cp38-*"
skip = "*-win32 *-manylinux_i686"

manylinux-x86_64-image = "manylinux2014"
archs = "auto64"

[tool.cibuildwheel.linux]
before-build = "bash pre_linux.sh"

[tool.cibuildwheel.macos]
before-build = "bash pre_mac.sh"
repair-wheel-command = [
    "export DYLD_LIBRARY_PATH='/usr/local/lib:/usr/lib'",
    "delocate-listdeps {wheel}",
    "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.windows]
before-all = ["mkdir C:\\libs"]

before-build = [
    "pip install delvewheel",
    "choco install tartool wget sed pkgconfiglite",
    "vcpkg install zlib:x64-windows freetype:x64-windows bzip2:x64-windows" ,
    #  cairo:x64-windows freetype:x64-windows eigen3:x64-windows",
]

environment = { TMP='C:\\temp', TEMP='C:\\temp', RUNNER_TEMP='C:\\temp'}
repair-wheel-command = "delvewheel repair --add-path C:\\libs -w {dest_dir} {wheel}"