[project]
requires-python = ">=3.6"
dependencies = [
    "numpy >= 1.19.4; python_version < '3.10'",
    "numpy >= 1.21.2; python_version >= '3.10'",    
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    # "cmake == 3.21.1",
    "ninja",
    "numpy == 1.19.4; python_version < '3.10'",
    "numpy == 1.21.3; python_version >= '3.10'",
    ]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]

build-verbosity = "3"

build = "cp36-* cp37-* cp38-* cp39-* cp310-*"
skip = "*-win32 *-manylinux_i686 cp310-win* *-musllinux*"

manylinux-x86_64-image = "manylinux2014"
archs = "auto64"

[tool.cibuildwheel.linux]

before-all = [
    "yum install -y wget freetype-devel zlib-devel libpng12-devel pixman-devel eigen3-devel",

    # compile cairo (RDKit needs older/other version than in centOS7 repo)
    "wget https://www.cairographics.org/releases/cairo-1.10.0.tar.gz --no-check-certificate",
    "tar xvf cairo-*",
    "cd cairo-*",
    "./configure",
    "make -j 20",
    "make install",
    "cd ..",
]

[tool.cibuildwheel.macos]

before-all = [
    "brew install cairo eigen gnu-sed",
    ]

before-build = [
    "pip install delocate==0.8.2"
    ]

repair-wheel-command = [
    "export DYLD_LIBRARY_PATH='/usr/local/lib:/usr/lib'",
    "delocate-listdeps {wheel}",
    "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.windows]

before-build = [
    "pip install delvewheel",
]

repair-wheel-command = ["delvewheel show -v --add-path C:\\libs {wheel}", "delvewheel repair -v  --add-path C:\\libs -w {dest_dir} {wheel}"]

[tool.cibuildwheel.windows.environment]
CMAKE_ARGS = '-DBoost_DEBUG=ON -DBoost_NO_SYSTEM_PATHS=ON -DRDK_BUILD_PYTHON_WRAPPERS=ON -DRDK_BUILD_INCHI_SUPPORT=ON -DRDK_BUILD_AVALON_SUPPORT=ON -DRDK_BUILD_YAEHMOP_SUPPORT=ON -DRDK_BUILD_CAIRO_SUPPORT=ON -DCMAKE_TOOLCHAIN_FILE=D:\\a\\rdkit-pypi\\rdkit-pypi\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake'

